tests/artifacts/httproute-tls-problems.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: eg
  namespace: default
  resourceVersion: "2879"
  uid: a435653a-2de9-4020-a816-f4e16013a010
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: self-signed
    port: 446
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: selfsigned-tls
  - allowedRoutes:
      namespaces:
        from: Same
    name: hostname-mismatch
    port: 447
    protocol: HTTPS
    hostname: wrong-host.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: gateway-tls
  - allowedRoutes:
      namespaces:
        from: Same
    name: missing-secret
    port: 448
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: does-not-exist
status:
  conditions:
  - lastTransitionTime: "2026-06-26T23:42:41Z"
    message: The Gateway has been scheduled by Envoy Gateway
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: self-signed
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: hostname-mismatch
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: missing-secret
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: selfsigned-tls
  namespace: default
  resourceVersion: "2883"
  uid: b435653a-2de9-4020-a816-f4e16013a014
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVVUhrQWNlS3I2UEkrSFRsQURsbUQxblZ1TXJZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JiM1JvWlhJdVpYaGhiWEJzWlM1amIyMHdJQmNOTWpZd056QTBNakV6TXpFeQpXaGdQTWpFeU5qQTJNVEF5TVRNek1USmFNQnd4R2pBWUJnTlZCQU1NRVc5MGFHVnlMbVY0WVcxd2JHVXVZMjl0Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdnZZYzdQbmd5OGthZUFxZVR3SXgKSkFCT0FEbnB3MnR6Zld1S051dmtLa0pYMTdBdzU1eWgvOG5CNDRYdHp3WFFheUozWGZRTXV5b20zRFYyL0dHbApyaVY2WTVWWmhPVVBXS [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQys5aHpzK2VETHlScDQKQ3A1UEFqRWtBRTRBT2VuRGEzTjlhNG8yNitRcVFsZlhzRERubktIL3ljSGpoZTNQQmRCckluZGQ5QXk3S2liYwpOWGI4WWFXdUpYcGpsVm1FNVE5WWlHSUNUbHlWWGZFT1MrKzNWb3JRdmRSdG1zVkRpYXpVV0svbzlEZXh5T2ZDCndOSEJOOHBLTnNRdko5YjNueVJOWnBPV2xxSXJPWW5HUzVnUmJRemV4T3A2N1A5MHRBdytVcTlFblRHL3VkUGMKTjZYUC9DT2gwVW1GVnZzeG5kYTJBUmRJTC9uajJ3ZW11OWxFZWd3ekRCcklVdzJIeXJkVHE3N2phVlcwams1NgpMV3RKc0k4bHVwb1M5V [...]
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: gateway-tls
  namespace: default
  resourceVersion: "2880"
  uid: b435653a-2de9-4020-a816-f4e16013a011
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lVZkwxVW9oalNFYVN0SXNuSVVJQlFGK0NqUG80d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hWR1Z6ZENCRFFUQWdGdzB5TmpBM01EUXlNVE16TVRKYUdBOHlNVEkyTURZeApNREl4TXpNeE1sb3dGakVVTUJJR0ExVUVBd3dMWlhoaGJYQnNaUzVqYjIwd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFES1o5K2NhUzZLQ05rZExaQ0p1djRNNnF6ME5DbHNCWXhPLzFocy9Fek0KNzhzWWdWZ1VZQU5lUFNEajBNM0tpQlIvazF5d0k5UU13c2JMMHhIQkFMak85YUk4UUJQdWpta2R3cEFPZ0g2UAp5dFlrLzNMSGNWNG1ZZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREtaOStjYVM2S0NOa2QKTFpDSnV2NE02cXowTkNsc0JZeE8vMWhzL0V6TTc4c1lnVmdVWUFOZVBTRGowTTNLaUJSL2sxeXdJOVFNd3NiTAoweEhCQUxqTzlhSThRQlB1am1rZHdwQU9nSDZQeXRZay8zTEhjVjRtWWZnL3hiTnAxa2x6dU1vMXJVYmtGMVo2CnQxYzFkbmRYY3M0QjNieldCbkhncTBQKzFLUFdHdVhNTG5WRnZqbTkxdDd5WVRzMFNHM0E5TUl2U3EwMCtFaFUKbnJVWjFyUE5OVWdjcTBKemw1VjlkQjFHcXA2b2lHeDI4aVNZanZaNTZUZERHdExCN1ZwZFU2b011TFFpcGY3bwpzd2tJd1JTK3hJcWp1Q [...]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: "2026-06-26T23:42:41Z"
  generation: 1
  name: app
  namespace: default
  resourceVersion: "2884"
  uid: c51b80c4-dc4d-425f-ad77-239ca333c147
spec:
  hostnames:
  - app.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: default
    sectionName: self-signed
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: default
    sectionName: hostname-mismatch
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: default
    sectionName: missing-secret
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: app-svc
      namespace: default
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
      sectionName: self-signed
  - conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
      sectionName: hostname-mismatch
  - conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Resolved all the Object references for the Route
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
      sectionName: missing-secret
